# repro-bazel-nested-set

./: .bazelrc  .gitignore  BUCK  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  tool.sh  write.sh
