load("//:defs.bzl", "deep_rule")

deep_rule(
    name = "big",
    srcs = ["src/file{}".format(i) for i in range(1, 33801)],
)

genrule(
    name = "timestamp",
    outs = ["display.txt"],
    cmd = "cat bazel-out/stable-status.txt > $@",
    output_to_bindir = True,
    stamp = True,
    tags = [
        "local",
        "no-cache",
    ],
)